@@ -148,10 +148,10 @@ if (!$gallery->album->fields["perms"]['canAddComments']) {
 	set_time_limit($gallery->app->timeLimit);
         $id = $gallery->album->getPhotoId($i);
         $index = $gallery->album->getPhotoIndex($id);
-        if($gallery->album->isAlbumName($i))
+        if($gallery->album->getAlbumName($i))
         {
             $embeddedAlbum = 1;
-            $myAlbumName = $gallery->album->isAlbumName($i);
+            $myAlbumName = $gallery->album->getAlbumName($i);
             $myAlbum = new Album();
             $myAlbum->load($myAlbumName);
             $myHighlightTag = $myAlbum->getHighlightTag();
