@@ -1,3 +1,9 @@
+2004-03-04  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b105
+
+	* Change: Stage 1 of a fix for bug 903936 -
+          1. Changing all calls to isAlbumName() into getAlbumName()
+          2. Addition of the isAlbum() function to the Album class
+
 2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b104
 
 	* Updated frame layout so TT/BB (top/bottom) images are repeated
